objects/dgAI3__DG_Companion__c.object
<CustomObject>
    <description>Object linked to the Case that stores additional data.</description>
    <fields>
        <fullName>dgAI3__Automation_Template_ID__c</fullName>
        <description>An ID of Automation Template which was used for Auto-reply</description>
        <label>Automation Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI3__Automation_Type__c</fullName>
        <label>Automation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dgAI3__Case_ID__c</fullName>
        <externalId>true</externalId>
        <label>Case ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI3__Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>What Case is this Analytic for</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>DG_Companions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dgAI3__Correct_Prediction__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Was the prediction correct when the case was closed</description>
        <label>Correct Prediction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dgAI3__DG_Language__c</fullName>
        <description>Stores current language of the conversation</description>
        <label>DG Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI3__Predicted_Field__c</fullName>
        <description>API Name of the Predicted Field</description>
        <label>Predicted Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI3__Predicted_Value__c</fullName>
        <description>Value that was predicted</description>
        <label>Predicted Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI3__Template_Name__c</fullName>
        <description>Name of Template which was used to outbound message</description>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DG Companion</label>
    <nameField>
        <label>DG Companion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DG Companions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>